--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aguevara1/map-tracking.git"
+    "url": "https://github.com/aguevara1/map-tracking.git"
   },
   "author": "",
   "license": "ISC",
